--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,30 +2,27 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:15
-    container_name: postgres_db
-    restart: always
+    image: postgres:13
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: registronotas
+      POSTGRES_DB: notas
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1234
+    volumes:
+      - pg_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
 
-  api:
+  web:
     build: .
-    container_name: api_registronotas
+    command: python aplicacion/manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgresql://user:password@db/registronotas
-    ports:
-      - "8000:8000"
-    volumes:
-      - .:/app
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+      - DATABASE_URL=postgres://postgres:1234@db:5432/notas
 
 volumes:
-  postgres_data:
+  pg_data:
