Configuracion de setting para la BD

--- a/aplicacion/Dockerfile
+++ b/aplicacion/Dockerfile
@@ -7,11 +7,14 @@ WORKDIR /app
 # Copiar los archivos del proyecto al contenedor
 COPY . .
 
+# Actualizar pip, setuptools y wheel
+RUN pip install --upgrade pip setuptools wheel
+
 # Instalar dependencias del proyecto
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Exponer el puerto en el que correrá Django
 EXPOSE 8000
 
-# Comando para ejecutar el servidor de Django
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Crear un script de inicio para aplicar migraciones y luego iniciar el servidor
+CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
