--- a/aplicacion/docker-compose.yml
+++ b/aplicacion/docker-compose.yml
@@ -1,31 +1,35 @@
-version: '3.8'
+# version: '3.8'
 
-services:
-  db:
-    image: postgres:15
-    container_name: postgres_db
-    restart: always
-    environment:
-      POSTGRES_DB: notas
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 1234
-    ports:
-      - "5432:5432"
-    volumes:
-      - pg_data:/var/lib/postgresql/data
+# services:
+#   db:
+#     image: postgres:15
+#     container_name: postgres_db
+#     restart: always
+#     environment:
+#       POSTGRES_DB: notas
+#       POSTGRES_USER: postgres
+#       POSTGRES_PASSWORD: 1234
+#     ports:
+#       - "5432:5432"
+#     volumes:
+#       - pg_data:/var/lib/postgresql/data
 
-  web:
-    build: .
-    container_name: django_api
-    restart: always
-    depends_on:
-      - db
-    ports:
-      - "8001:8000"
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-    volumes:
-      - .:/app
+#   web:
+#     build: .
+#     container_name: django_api
+#     restart: always
+#     depends_on:
+#       - db
+#     ports:
+#       - "8001:8000"
+#     environment:
+#       - POSTGRES_USER=postgres
+#       - POSTGRES_PASSWORD=1234
+#       - POSTGRES_DB=notas
+#       - POSTGRES_HOST=db     
+#       - POSTGRES_PORT=5432
+#     volumes:
+#       - .:/app
 
-volumes:
-  pg_data:
+# volumes:
+#   pg_data:
