Se implementa Keycloack en DockerCompose y configuracion en Settings.py

--- a/aplicacion/docker-compose.yml
+++ b/aplicacion/docker-compose.yml
@@ -31,5 +31,17 @@ services:
     volumes:
       - .:/app
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.1
+    container_name: keycloak
+    command: start-dev
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+
 volumes:
   pg_data:
